Backport from trunk: run all bundled related foundset queries with same connection Case: SVY-900